se empieza con la implementación del carrito de compras

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MeangFrontend</title>
+    <title>Mercado Vida</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/1ac226387d.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body>
+  <body id ="app">
     <app-root></app-root>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
